--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ font-family: 'Roboto Mono', monospace;
   --text-color: hsl(var(--hue-color), 10%, 40%);
   --main-color: hsl(var(--hue-color), 10%, 20%);
   --text-color-light: hsl(var(--hue-color), 10%, 65%);
-  --inpur-color: hsl(var(--hue-color), 70%, 88%);
+  --input-color: hsl(var(--hue-color), 70%, 88%);
   --body-color: hsl(var(--hue-color), 66%, 99%);
   --container-color: #fff;
   --scroll-bar-color: hsl(var(--hue-color), 15%, 85%);
@@ -37,7 +37,7 @@ font-family: 'Roboto Mono', monospace;
 
   /* FONT AND TYPOGRAPHY */
 
-  --gulible-font: "Maven Pro", sans-serif;
+  --gullible-font: "Maven Pro", sans-serif;
   --body-font: "Poppins", sans-serif;
   --roboto-font: "Roboto", sans-serif;
   --robotomono-font: "Roboto Mono", monospace;
@@ -74,7 +74,7 @@ font-family: 'Roboto Mono', monospace;
   /* Z-Index */
 
   --z-tooltip: 10;
-  --zfixed: 100;
+  --z-fixed: 100;
   --z-modal: 1000;
 }
 
@@ -88,4 +88,126 @@ font-family: 'Roboto Mono', monospace;
     --small-font-size: 0.875rem;
     --smaller-font-size: 0.813rem;
   }
+}
+
+/* VARIABLE COLOR DARK THEME */
+body.dark-theme {
+  /* HSL COLOR MODE*/
+  --first-color: hsl(var(--hue-color), 69%, 58%); /* NOT CHANGED */
+  --first-color-second: hsl(var(--hue-color), 30%, 8%);
+  --first-color-alt: hsl(var(--hue-color), 55%, 50%); /* NOT CHANGED */
+  --first-color-lighter: hsl(var(--hue-color), 90%, 82%); /* NOT CHANGED */
+
+  --title-color: hsl(var(--hue-color), 10%, 95%);
+  --text-color: hsl(var(--hue-color), 10%, 75%);
+  --main-color: hsl(var(--hue-color), 10%, 75%);
+  --text-color-light: hsl(var(--hue-color), 10%, 65%); /* NOT CHANGED */
+  --input-color: hsl(var(--hue-color), 29%, 16%);
+  --body-color: hsl(var(--hue-color), 30%, 14%);
+  --container-color: hsl(var(--hue-color), 30%, 16%);
+  --scroll-bar-color: hsl(var(--hue-color), 10%, 50%);
+  --scroll-thumb-color: hsl(var(--hue-color), 15%, 32%);
+}
+
+/* NAV BUTTONS DARK/LIGHT THEME */
+.nav__btns {
+  display: flex;
+  align-items: center;
+  padding-left: var(--mb-0-5);
+  margin: 0;
+  margin-top: -5px;
+}
+
+.change-theme {
+  font-size: 1.25rem;
+  color: var(--title-color);
+  margin-right: var(--mb-1);
+  cursor: pointer;
+}
+
+.change-theme:hover {
+  color: var(--first-color);
+}
+
+/* BASE ITEMS */
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0 0 var(--header-height) 0;
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  background-color: var(--body-color);
+}
+
+h1,
+h2,
+h3,
+h4 {
+  color: var(--title-color);
+  font-weight: var(--font-semi-bold);
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* REUSABLE CSS CLASSES  */
+.section {
+  padding: 2rem 0 4rem;
+  margin: auto;
+  min-height: 80vh;
+}
+
+.section__title {
+  font-size: var(--big-font-size);
+  font-family: var(--gullible-font);
+}
+
+.section__subtitle {
+  display: block;
+  font-size: var(--small-font-size);
+  margin-bottom: var(--mb-3);
+}
+
+.section__title,
+.section__subtitle {
+  text-align: center;
+}
+
+/* LAYOUT  */
+
+.container {
+  margin-right: var(--mb-1);
+}
+
+.grid {
+  display: grid;
+}
+
+.header {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: var(--z-fixed);
+  background-color: var(--body-color);
 }
