--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ font-family: 'Maven Pro', sans-serif;
 font-family: 'Poppins', sans-serif;
 font-family: 'Roboto', sans-serif;
 font-family: 'Roboto Mono', monospace;
+font-family: 'Russo One', sans-serif;
 */
 
 /* ============ VARIABLE CSS ==============*/
@@ -41,6 +42,7 @@ font-family: 'Roboto Mono', monospace;
   --body-font: "Poppins", sans-serif;
   --roboto-font: "Roboto", sans-serif;
   --robotomono-font: "Roboto Mono", monospace;
+  --bigfat-font: "Russo One", sans-serif;
 
   /* 1rem = 16px .5rem = 8px */
   --big-font-size: 2rem;
@@ -193,6 +195,41 @@ img {
   text-align: center;
 }
 
+/* BUTTON STYLING */
+.button {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  font-weight: var(--font-medium);
+}
+
+.button:hover {
+  background-color: var(--first-color-alt);
+  color: #fff;
+}
+
+.button__icon {
+  font-size: 1.25rem;
+  margin-left: var(--mb-0-5);
+  transition: 0.3s;
+}
+
+.button--flex {
+  display: inline-flex;
+  align-items: center;
+}
+
+.button--white {
+  background-color: #fff;
+  color: var(--first-color);
+}
+
+.button--white:hover {
+  background-color: var(--first-color-lighter);
+}
+
 /* LAYOUT  */
 
 .container {
@@ -313,4 +350,154 @@ img {
 
 .scroll-header {
   box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+}
+
+/* HOME STYLING */
+.home {
+  height: 90vh;
+  align-content: space-between;
+  margin-top: var(--mb-3);
+}
+
+.home__container {
+  display: flex;
+  gap: 1.75rem;
+  padding-left: 0;
+  margin-left: var(--mb-1);
+  justify-content: space-around;
+}
+
+.home__content {
+  display: grid;
+  grid-template-columns: 0.08fr 1fr;
+  grid-template-areas: "home__social home__content";
+  padding-top: var(--mb-2-5);
+  align-items: center;
+  height: auto;
+  align-content: space-between;
+  margin-right: var(--mb-0-25);
+  margin-left: 0;
+}
+
+.home__social {
+  display: grid;
+  grid-area: home__social;
+  grid-template-columns: max-content;
+  row-gap: 1rem;
+  column-gap: 2rem;
+  margin: 0;
+}
+
+.home__social-icon {
+  font-size: 1.25rem;
+  color: var(--first-color);
+}
+
+.home__social-icon:hover {
+  color: var(--first-color-alt);
+}
+
+.home__data {
+  grid-area: home__content;
+  align-content: center;
+  text-align: center;
+}
+
+.home__welcome {
+  text-align: center;
+  font-size: var(--smaller-font-size);
+  color: var(--text-color);
+  padding: 1.5rem;
+}
+
+.home__title {
+  text-align: center;
+  font-size: var(--big-font-size);
+  color: var(--text-color);
+  margin-top: var(--mb-1-5);
+  padding-bottom: 1rem;
+}
+
+#typewriter {
+  margin-top: var(--mb-1);
+  margin-bottom: var(--mb-2);
+}
+
+.Typewriter__wrapper {
+  text-align: center;
+  font-size: var(--h2-font-size);
+  font-family: var(--robotomono-font);
+  font-weight: var(--font-medium);
+  color: var(--main-color);
+}
+
+.Typewriter__cursor {
+  font-size: var(--h1-font-size);
+  color: var(--text-color);
+  font-family: var(--gullible-font);
+  font-weight: 600;
+}
+
+.home__subtitle {
+  text-align: center;
+  font-size: var(--h3-font-size);
+  color: var(--text-color);
+  font-weight: var(--font-medium);
+  margin-bottom: var(--mb-1);
+  padding: 1rem 1.5rem 1rem 1.5rem;
+}
+
+/* SCROLL DOWN */
+@keyframes scrollDown {
+  0% {
+    margin-top: 14px;
+    opacity: 0;
+  }
+  15% {
+    margin-top: 14px;
+    opacity: 1;
+  }
+  30% {
+    margin-top: 16px;
+    opacity: 1;
+  }
+  50% {
+    margin-top: 30px;
+    opacity: 1;
+  }
+  100% {
+    margin-top: 30px;
+    opacity: 0;
+  }
+}
+
+.home__scroll {
+  display: flex;
+  justify-content: center;
+  margin-top: var(--mb-1);
+  animation: scrollDown 2.5s infinite;
+}
+
+.home__scroll-button {
+  color: var(--first-color);
+  transition: 0.5s;
+}
+.home__scroll-button:hover {
+  color: var(--first-color-alt);
+  transform: translateY(0.25rem);
+}
+
+.home__scroll-mouse {
+  font-size: var(--big-font-size);
+}
+
+.home__scoll-name {
+  font-size: var(--small-font-size);
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+  margin: var(--mb-0-25);
+}
+
+.home__scroll-arrow {
+  font-size: var(--h1-font-size);
 }
