--- a/css/style.css
+++ b/css/style.css
@@ -352,11 +352,12 @@ img {
   box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
 }
 
-/* HOME STYLING */
+/* ============================= HOME STYLING ============================= */
 .home {
-  height: 90vh;
+  height: 70vh;
   align-content: space-between;
   margin-top: var(--mb-3);
+  padding-bottom: 0;
 }
 
 .home__container {
@@ -489,6 +490,7 @@ img {
 
 .home__scroll-mouse {
   font-size: var(--big-font-size);
+  margin-top: var(--mb-3);
 }
 
 .home__scoll-name {
@@ -500,4 +502,51 @@ img {
 
 .home__scroll-arrow {
   font-size: var(--h1-font-size);
+}
+
+/* ============================= ABOUT STYLING ============================= */
+
+.about__container {
+  align-items: center;
+  padding-top: 1rem;
+}
+
+.about__img {
+  width: 200px;
+  border-radius: 0.5rem;
+  margin-bottom: var(--mb-2);
+  justify-self: center;
+}
+
+.about__description {
+  text-align: center;
+  margin-bottom: var(--mb-2-5);
+}
+
+.about__info {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: var(--mb-2-5);
+}
+
+.about__info-title {
+  font-size: var(--h2-font-size);
+  font-weight: var(--font-semi-bold);
+  color: var(--title-color);
+}
+
+.about__info-name {
+  font-size: var(--smaller-font-size);
+  font-family: var(--roboto-font);
+}
+
+.about__info-name,
+.about__info-title {
+  display: block;
+  text-align: center;
+}
+
+.about__buttons {
+  display: flex;
+  justify-content: center;
 }
